Fix mobile overflow and about scrolling

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -91,6 +91,7 @@ main {
 	max-width: calc(100% - 2em);
 	margin: auto;
 	padding: 3em 1em;
+	box-sizing: border-box;
 }
 h1,
 h2,
